force-app/main/default/objects/Algorithmic_Trade__x/Algorithmic_Trade__x.object-meta.xml
<CustomObject>
    <externalDataSource>Amazon_DynamoDB_EU_West_1</externalDataSource>
    <externalName>Algorithmic-Trades</externalName>
    <label>Algorithmic Trade</label>
    <pluralLabel>Algorithmic Trades</pluralLabel>
</CustomObject>