force-app/main/default/objects/Algorithmic_Trade__x/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <externalDeveloperName>accountId</externalDeveloperName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Algorithmic Trades</relationshipLabel>
    <relationshipName>Algorithmic_Trades</relationshipName>
    <type>Lookup</type>
</CustomField>