force-app/main/default/objects/Algorithmic_Trade__x/fields/Elapse_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Elapse_Minutes__c</fullName>
    <externalDeveloperName>elapseMinutes</externalDeveloperName>
    <label>Elapse Minutes</label>
    <length>25</length>
    <type>Text</type>
</CustomField>