force-app/main/default/objects/Algorithmic_Trade__x/fields/Profit__c.field-meta.xml
<CustomField>
    <fullName>Profit__c</fullName>
    <externalDeveloperName>profit</externalDeveloperName>
    <label>Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>