force-app/main/default/objects/Algorithmic_Trade__x/fields/Profit_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Profit_Percentage__c</fullName>
    <externalDeveloperName>profitPercentage</externalDeveloperName>
    <label>Profit Percentage (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>