force-app/main/default/objects/Algorithmic_Trade__x/fields/Trade_Id__c.field-meta.xml
<CustomField>
    <fullName>Trade_Id__c</fullName>
    <externalDeveloperName>tradeId</externalDeveloperName>
    <label>Trade Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>